// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Render must match IsChecked() 1`] = `
<div
  className="m-0 form-checkbox"
>
  <label
    htmlFor="checkbox"
  >
    <input
      aria-describedby="help-text-for-checkbox"
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    is checked
  </label>
</div>
`;

exports[`<Checkbox /> Render must match renderIsNotChecked() 1`] = `
<div
  className="m-0 form-checkbox"
>
  <label
    htmlFor="checkbox"
  >
    <input
      aria-describedby="help-text-for-checkbox"
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    is not checked
  </label>
</div>
`;
